# KRS-Unleashed

./: README.md
krs/: .gitignore  README.md  cyclone_kria.xml  cyclone_x86.xml
krs/src/apriltag_accel/: CMakeLists.txt  README.md  package.xml
krs/src/apriltag_accel/include/apriltag_accel/: blur_fpga.hpp  decimate_fpga.hpp  streamed_fpga.hpp  threshold_fpga.hpp  xf_blur_config.h  xf_config_params.h  xf_decimate_config.h  xf_threshold_config.h
krs/src/apriltag_accel/launch/: final_trace.py  final_trace1.py  trace_apriltag_accel0.py  trace_apriltag_accel1.py  trace_apriltag_accel2.py  trace_apriltag_accel3.py  trace_apriltag_accel4.py
krs/src/apriltag_accel/src/: blur_fpga.cpp  blur_fpga_node.cpp  decimate_fpga.cpp  decimate_fpga_node.cpp  streamed_fpga.cpp  streamed_fpga_node.cpp  threshold_fpga.cpp  threshold_fpga_node.cpp  xf_blur_accel.cpp
krs/src/apriltag_cpp/: CMakeLists.txt  README.md  package.xml
krs/src/apriltag_cpp/include/apriltag_cpp/: message_serializer.hpp  params.hpp
krs/src/apriltag_cpp/launch/: apriltag.py  debug_apriltag_1.py  debug_apriltag_2.py  debug_apriltag_3.py  debug_apriltag_4.py  final_trace1.py  final_trace2.py  trace_apriltag.py  trace_apriltag_final.py  trace_apriltag_nodes.py  tracing_single_node_apriltag_launch.py
krs/src/apriltag_cpp/src/: apriltag_blur_component.cpp  apriltag_blur_node.cpp  apriltag_contours_component.cpp  apriltag_contours_node.cpp  apriltag_cpp_node.cpp  apriltag_decimate_component.cpp  apriltag_decimate_node.cpp  apriltag_hulls_component.cpp  apriltag_hulls_node.cpp  apriltag_quads_component.cpp  apriltag_quads_node.cpp  apriltag_tag_decode_component.cpp  apriltag_tag_decode_node.cpp  apriltag_threshold_component.cpp  apriltag_threshold_node.cpp
krs/src/apriltag_cpp/src/apriltag/: AprilTypes.h  CameraUtil.cpp  CameraUtil.h  DebugImage.cpp  Geometry.cpp  Geometry.h  GrayModel.cpp  GrayModel.h  MathUtil.cpp  MathUtil.h  Refine.cpp  Refine.h  TagDetection.h  TagDetector.cpp  TagDetector.h  TagFamilies.cpp  TagFamily.cpp  TagFamily.h  UnionFindSimple.cpp
krs/src/apriltag_utils/: CMakeLists.txt  README.md  package.xml
krs/src/apriltag_utils/msg/: ApriltagDetection.msg  ApriltagDetections.msg  Cluster.msg  Clusters.msg  ContoursResult.msg  HullsResult.msg  Pt.msg  Quad.msg  Quads.msg  QuadsV2.msg  TagPose.msg  TagPoses.msg  Ufrec.msg  Unionfind.msg  Zarray.msg
krs/src/base/: README.md
krs/src/base/acceleration/: README.md
krs/src/base/acceleration/ament_acceleration/: CHANGELOG.rst  ament_acceleration-extras.cmake  package.xml
krs/src/base/acceleration/ament_acceleration/cmake/: firmware_path.cmake
krs/src/base/acceleration/vitis_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
krs/src/base/krs_firmware/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
krs/src/base/krs_firmware/cmake/: firmware_setup.cmake  generate_mixin.cmake
krs/src/base/krs_firmware/templates/: kr260.mixin.template
krs/src/base/tracetools_kernels/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
krs/src/base/tracetools_kernels/include/tracetools_kernels/: config.h.in  tp_call.h  tracetools.h  utils.hpp  visibility_control.hpp
krs/src/base/tracetools_kernels/src/: status.c  tp_call.c  tracetools.c  utils.cpp
krs/src/minimal_image_pub/: CMakeLists.txt  README.md  package.xml
krs/src/minimal_image_pub/include/minimal_image_pub/: minimal_image_pub.hpp
krs/src/minimal_image_pub/src/: minimal_image_pub.cpp
os_workspace/: README.md
os_workspace/firmware_kr260_petalinux/: .gitignore  README.md  firmware_kria_petalinux.code-workspace  petalinux.mixin
os_workspace/firmware_kr260_petalinux/artifacts/: lttng.py
os_workspace/firmware_kr260_petalinux/petalinx_config/: config  rootfs_config  user-rootfsconfig
os_workspace/firmware_kr260_petalinux/scripts/: device_tree_gen.sh  petalinux.sh  xsct.tcl
os_workspace/firmware_kr260_ubuntu/: README.md  prepare_sysroot.sh
os_workspace/firmware_kr260_ubuntu/patches/: customize.patch
vitis/: .gitignore  README.md
vitis/scripts/: .gitignore  check_config.py  config.yaml  config_scheme.json  configuration_manager.py  constants.py  create_hls.py  create_platform.py  simple_yaml_parser.py  test.py  vitis_ws.py
vitis/sources/apriltag_smarobix/: apriltag_smarobix_host_code.cpp
vitis/sources/blur/: blur_config_params.hpp  blur_host_code.cpp  blur_kernel.cpp  blur_kernel.hpp  blur_kernel_test.cpp  blur_kernel_test.hpp
vitis/sources/decimate/: decimate_config_params.hpp  decimate_host_code.cpp  decimate_kernel.cpp  decimate_kernel.hpp  decimate_kernel_test.cpp  decimate_kernel_test.hpp
vitis/sources/hls_utils/: cmd_line_parser.cpp  cmd_line_parser.hpp  params.hpp  xcl2.cpp  xcl2.hpp
vitis/sources/mat_mul/: mat_mul_config_params.hpp  mat_mul_host_code.cpp  mat_mul_kernel.cpp  mat_mul_kernel.hpp  mat_mul_kernel_test.cpp  mat_mul_kernel_test.hpp
vitis/sources/misc/: post_tresh.pnm  pre_blur.pnm  pre_thresh.pnm  run.sh
vitis/sources/threshold/: threshold_config_params.hpp  threshold_host_code.cpp  threshold_kernel.cpp  threshold_kernel.hpp  threshold_kernel_old.cpp  threshold_kernel_test.cpp  threshold_kernel_test.hpp
vitis/template/: pl.dtbo  shell.json
