<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_cpp</name>
  <version>1.0.0</version>
  <description>Rosified Apriltag CPP</description>
  <maintainer email="paul.gottschaldt@tu-dresden.de">paul</maintainer>
  <license>Apache License 2.0</license>
<author email="paul.gottschaldt@tu-dresden.de">Paul Gottschaldt</author>

  <depend>tracetools_kernels</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_components</depend>
  <depend>apriltag_utils</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
