<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_utils</name>
  <version>1.0.0</version>
  <description>Util package for Apriltag algorithms</description>
  <maintainer email="paul.gottschaldt@tu-dresden.de">paul</maintainer>
  <license>Apache License 2.0</license>
<author email="paul.gottschaldt@tu-dresden.de">Paul Gottschaldt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
