<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_acceleration</name>
  <version>0.3.0</version>
  <description>
    CMake macros and utilities to include hardware acceleration into the ROS 2 build system (ament) and its development flows.
  </description>
    <maintainer email="paul.gottschaldt@tu-dresden.de">Paul Gottschaldt</maintainer>  
  <author email="victor@accelerationrobotics.com">Víctor Mayoral Vilches</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
